@@ -83,14 +83,14 @@ public class BigDecimalRoundingConstantsToEnums extends Recipe {
                     if (roundingModeEnum == null) {
                         return m;
                     }
-                    m = twoArgDivide.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().get(0), roundingModeEnum);
+                    m = twoArgDivide.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().getFirst(), roundingModeEnum);
                     maybeAddImport("java.math.RoundingMode");
                 } else if (BIG_DECIMAL_SET_SCALE.matches(m) && isConvertibleBigDecimalConstant(m.getArguments().get(1))) {
                     String roundingModeEnum = getTemplateText(m.getArguments().get(1));
                     if (roundingModeEnum == null) {
                         return m;
                     }
-                    m = twoArgScale.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().get(0), roundingModeEnum);
+                    m = twoArgScale.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().getFirst(), roundingModeEnum);
                     maybeAddImport("java.math.RoundingMode");
                 } else if (BIG_DECIMAL_DIVIDE_WITH_SCALE.matches(m) &&
                            isConvertibleBigDecimalConstant(m.getArguments().get(2))) {
@@ -98,7 +98,7 @@ public class BigDecimalRoundingConstantsToEnums extends Recipe {
                     if (roundingModeEnum == null) {
                         return m;
                     }
-                    m = threeArg.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().get(0), m.getArguments().get(1), roundingModeEnum);
+                    m = threeArg.apply(updateCursor(m), m.getCoordinates().replaceArguments(), m.getArguments().getFirst(), m.getArguments().get(1), roundingModeEnum);
                     maybeAddImport("java.math.RoundingMode");
                 }
                 return m;
@@ -107,8 +107,7 @@ public class BigDecimalRoundingConstantsToEnums extends Recipe {
             private boolean isConvertibleBigDecimalConstant(J elem) {
                 if (elem instanceof J.Literal) {
                     return true;
-                } else if (elem instanceof J.FieldAccess && ((J.FieldAccess) elem).getTarget().getType() instanceof JavaType.FullyQualified) {
-                    J.FieldAccess fa = (J.FieldAccess) elem;
+                } else if (elem instanceof J.FieldAccess fa && fa.getTarget().getType() instanceof JavaType.FullyQualified) {
                     return fa.getTarget().getType() != null && TypeUtils.isOfClassType(fa.getTarget().getType(), "java.math.BigDecimal");
                 }
                 return false;
@@ -117,13 +116,12 @@ public class BigDecimalRoundingConstantsToEnums extends Recipe {
             @Nullable
             private String getTemplateText(J elem) {
                 String roundingName = null;
-                if (elem instanceof J.FieldAccess && ((J.FieldAccess) elem).getTarget().getType() instanceof JavaType.FullyQualified) {
-                    J.FieldAccess fa = (J.FieldAccess) elem;
+                if (elem instanceof J.FieldAccess fa && fa.getTarget().getType() instanceof JavaType.FullyQualified) {
                     if (fa.getTarget().getType() != null && TypeUtils.isOfClassType(fa.getTarget().getType(), "java.math.BigDecimal")) {
                         roundingName = fa.getSimpleName();
                     }
-                } else if (elem instanceof J.Literal) {
-                    roundingName = ((J.Literal) elem).getValueSource();
+                } else if (elem instanceof J.Literal literal) {
+                    roundingName = literal.getValueSource();
                 }
                 if (roundingName != null) {
                     switch (roundingName) {
