@@ -65,7 +65,7 @@ public class UnnecessaryCloseInTryWithResources extends Recipe {
                     J.Try.Resource tryResource = tr.getResources().get(i);
                     if (tryResource.getVariableDeclarations() instanceof J.VariableDeclarations) {
                         J.VariableDeclarations varDecls = (J.VariableDeclarations) tryResource.getVariableDeclarations();
-                        resourceNames[i] = varDecls.getVariables().get(0).getSimpleName();
+                        resourceNames[i] = varDecls.getVariables().getFirst().getSimpleName();
                     } else if (tryResource.getVariableDeclarations() instanceof J.Identifier) {
                         J.Identifier identifier = (J.Identifier) tryResource.getVariableDeclarations();
                         resourceNames[i] = identifier.getSimpleName();
@@ -73,8 +73,7 @@ public class UnnecessaryCloseInTryWithResources extends Recipe {
                 }
 
                 tr = tr.withBody(tr.getBody().withStatements(ListUtils.map(tr.getBody().getStatements(), statement -> {
-                    if (statement instanceof J.MethodInvocation) {
-                        J.MethodInvocation mi = (J.MethodInvocation) statement;
+                    if (statement instanceof J.MethodInvocation mi) {
                         if (AUTO_CLOSEABLE_METHOD_MATCHER.matches(mi) && mi.getSelect() instanceof J.Identifier) {
                             String selectName = ((J.Identifier) mi.getSelect()).getSimpleName();
                             for (String resourceName : resourceNames) {
